--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -18,12 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "001e0507",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lý Huỳnh Gia Huy\n",
+      "Tôi đến từ Đồng Nai\n",
+      "Tôi đang học ngành Xử Lý Dữ Liệu\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code lab 1 bài 1 ở đây"
+    "# Code lab 1 bài 1 ở đây\n",
+    "print(\"Lý Huỳnh Gia Huy\")\n",
+    "print(\"Tôi đến từ Đồng Nai\")\n",
+    "print(\"Tôi đang học ngành Xử Lý Dữ Liệu\")"
    ]
   },
   {
@@ -106,8 +119,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
