Dạ em nộp LAB 2

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -18,6 +18,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f41c7176",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "001e0507",
    "metadata": {},
@@ -181,11 +189,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cộng =  60.0\n",
-      "Trừ =  30.0\n",
-      "Chia =  3.0\n",
-      "Nhân =  675.0\n",
-      "X^Y =  6.283298708943146e+24\n",
+      "Cộng =  97.0\n",
+      "Trừ =  -7.0\n",
+      "Chia =  0.8653846153846154\n",
+      "Nhân =  2340.0\n",
+      "X^Y =  9.269380636232708e+85\n",
       "Căn X =  6.708203932499369\n",
       "CosX =  0.7071067811865476\n",
       "SinX =  0.7071067811865476\n",
