Dạ thầy cho em nộp bài ạ

--- a/lab6.ipynb
+++ b/lab6.ipynb
@@ -23,7 +23,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 6 bài 1 ở đây"
+    "# Code lab 6 bài 1 ở đây\n",
+    "from hinh import CN, HV\n",
+    "ChuNhat = CN(5,6)\n",
+    "ChuNhat1 = CN(7,8)\n",
+    "Vuong = HV(5)\n",
+    "ChuNhat.Xuat()\n",
+    "ChuNhat1.Xuat()\n",
+    "Vuong.Xuat()\n"
    ]
   },
   {
@@ -41,7 +48,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 6  bài 2 ở đây"
+    "# Code lab 6  bài 2 ở đây\n",
+    "from sinhvien import SinhVienPoly\n",
+    "class SVcntt(SinhVienPoly):\n",
+    "    def __init__(self, TenSinhVien, Nganh, Diem):\n",
+    "        super().__init__(TenSinhVien, Nganh)\n",
+    "        self.diem = Diem\n",
+    "    def get_diem(self):\n",
+    "        return self.diem\n",
+    "SinhVien = SVcntt(\"A\", \"CNTT\", 9)\n",
+    "SinhVien1 = SVcntt(\"B\", \"CNTT\", 9.5)\n",
+    "SinhVien.xuat()\n",
+    "SinhVien1.xuat()\n",
+    "    "
    ]
   },
   {
@@ -72,12 +91,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4c707ec1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code lab 6 bài 4 ở đây"
+    "# code lab 6 bài 4 ở đây\n",
+    "from sinhvien import QuanLySinhVien\n",
+    "\n",
+    "ql = QuanLySinhVien()\n",
+    "\n",
+    "menu = {\n",
+    "    \"1\": \"Nhập danh sách sinh viên\",\n",
+    "    \"2\": \"Xuất thông tin danh sách sinh viên\",\n",
+    "    \"3\": \"Xuất danh sách sinh viên có học lực giỏi\",\n",
+    "    \"4\": \"Sắp xếp danh sách sinh viên theo điểm\",\n",
+    "    \"5\": \"Kết thúc\"\n",
+    "}\n",
+    "\n",
+    "while True:\n",
+    "    print(\"\\n===== MENU QUẢN LÝ SINH VIÊN =====\")\n",
+    "    for k, v in menu.items():\n",
+    "        print(f\"{k}. {v}\")\n",
+    "\n",
+    "    lua_chon = input(\"Nhập lựa chọn: \")\n",
+    "\n",
+    "    match lua_chon:\n",
+    "        case \"1\":\n",
+    "            ql.nhap_sinh_vien()\n",
+    "        case \"2\":\n",
+    "            ql.xuat_ds()\n",
+    "        case \"3\":\n",
+    "            ql.xuat_sv_gioi()\n",
+    "        case \"4\":\n",
+    "            ql.sap_xep_theo_diem()\n",
+    "        case \"5\":\n",
+    "            print(\" Kết thúc chương trình.\")\n",
+    "            break\n",
+    "        case _:\n",
+    "            print(\" Lựa chọn không hợp lệ, vui lòng nhập lại.\")\n",
+    "            print([sv.TenSinhVien for sv in ql.danh_sach])\n",
+    "\n"
    ]
   },
   {
@@ -101,13 +155,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.13.2"
   }
  },
  "nbformat": 4,
