--- a/lab7.ipynb
+++ b/lab7.ipynb
@@ -23,7 +23,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 7 bài 1 ở đây"
+    "# Code lab 7 bài 1 ở đây\n",
+    "A = open(\"DAT2011-Lab7-resource.txt\", \"r\", encoding=\"utf-8\")\n",
+    "print(A)\n",
+    "print(A.read(9))\n",
+    "print(A.readline(2))\n",
+    "A.close\n"
    ]
   },
   {
@@ -41,7 +46,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 7  bài 2 ở đây"
+    "# Code lab 7  bài 2 ở đây\n",
+    "A = open(\"Lab7_resource2.txt\", \"a,r\")\n",
+    "A.write(\"Nếu một mai tôi bay lên trời \" \\\n",
+    "\"Thì người ơi tui đã sống rất thảnh thơi\" \\\n",
+    "\"Nếu một mai tui có đi qua đời\" \\\n",
+    "\"Thì người ơi tôi đã sống rất tuyệt vời\")\n",
+    "A.close\n",
+    "print(A.read())\n"
    ]
   },
   {
@@ -59,7 +71,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 7  bài 3 ở đây"
+    "# Code lab 7  bài 3 ở đây\n",
+    "import csv\n",
+    "with open(\"A.csv\", \"w\", encoding=\"utf-8\") as file:\n",
+    "    T = csv.T(file)\n",
+    "    T.writerow([\"Tiêu đề\" ,\"Tên tác giả\", \"Năm sáng tác\"])\n",
+    "    for i in range(5):\n",
+    "        TD = input(f\"Nhập tiêu đề bài thơ {i+1}: \")\n",
+    "        TG = input(\"Nhập tên tác giả\")\n",
+    "        N = input(\"Nhập năm sác tác\")\n",
+    "        T.writerow([TD, TG, N])\n",
+    "print(\"Đã ghi thông tin 5 bài thơ vào file\")\n",
+    "\n"
    ]
   },
   {
@@ -77,7 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code lab 7 bài 4 ở đây"
+    "# code lab 7 bài 4 ở đây\n",
+    "\n"
    ]
   },
   {
