--- a/lab8.ipynb
+++ b/lab8.ipynb
@@ -23,7 +23,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 8 bài 1 ở đây"
+    "# Code lab 8 bài 1 ở đây\n",
+    "HT = input(\"Nhập họ và tên: \").strip()\n",
+    "H = HT.split()\n",
+    "Ho = H[0].upper()\n",
+    "T = H[-1].upper()\n",
+    "TD =\" \".join(H[1:-1]) if len(H) > 2 else\" \"\n",
+    "print(\"Họ: \", Ho)\n",
+    "print(\"Tên: \", T)\n",
+    "print(\"Tên đệm: \",TD)"
    ]
   },
   {
@@ -41,7 +49,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 8  bài 2 ở đây"
+    "# Code lab 8  bài 2 ở đây\n",
+    "import re \n",
+    "SV = {}\n",
+    "SV[\"HT\"] = input(\"Nhập họ và tên: \")\n",
+    "SV[\"Massv\"] = input(\"Nhập mã số sinh viên: \")\n",
+    "MSSV = r\"^PS\\d{5}$\"\n",
+    "if not re.match(MSSV,SV[\"Massv\"]):\n",
+    "    print(\"Mã số sinh viên không hợp lệ\")\n",
+    "else:\n",
+    "    print(\"Mã số sinh viên hợp lệ\")\n",
+    "\n",
+    "    \n",
+    "\n"
    ]
   },
   {
@@ -55,11 +75,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7034990b",
+   "id": "fbd2b149",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 8  bài 3 ở đây"
+    "import random \n",
+    "S = [str(random.randint(0, 100)) for _ in range(1_000_000)]\n",
+    "with open(\"S.txt\", \"w\") as file:\n",
+    "    file.NN(\" \".join(S))\n",
+    "print(\"Đã tạo file chứa một triệu số\")"
    ]
   },
   {
@@ -77,7 +101,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code lab 8 bài 4 ở đây"
+    "# code lab 8 bài 4 ở đây\n",
+    "import staristics\n",
+    "with open(\"S.txt\", \"r\") as file:\n",
+    "    T = file.read().split()\n",
+    "T = list(map(int, T))\n",
+    "TB = staristics.mean(T)\n",
+    "DLC = staristics.stdev(T)\n",
+    "print(\"Giá trị trung bình: \",TB)\n",
+    "print(\"Độ lệch chuẩn: \",DLC)\n",
+    "\n"
    ]
   },
   {
