--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -19,14 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f41c7176",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "id": "001e0507",
    "metadata": {},
    "outputs": [
@@ -57,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "fa9cb39f",
    "metadata": {},
    "outputs": [
@@ -65,8 +57,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chu vi = 30.0\n",
-      "Diện tích =  54.0\n"
+      "Chu vi = 1354.0\n",
+      "Diện tích =  15042.0\n"
      ]
     }
    ],
@@ -99,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "7034990b",
    "metadata": {},
    "outputs": [
@@ -147,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "4c707ec1",
    "metadata": {},
    "outputs": [
@@ -155,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Căn Delta 8.426149773176359\n"
+      "Căn Delta 8.94427190999916\n"
      ]
     }
    ],
@@ -198,6 +190,17 @@
       "CosX =  0.7071067811865476\n",
       "SinX =  0.7071067811865476\n",
       "TanX =  0.9999999999999999\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 29\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTanX = \u001b[39m\u001b[33m\"\u001b[39m,TX)\n\u001b[32m     28\u001b[39m \u001b[38;5;66;03m# Logarit\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m CS = \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     30\u001b[39m Log10 = math.log10(X)\n\u001b[32m     31\u001b[39m Ln = math.log(X)\n",
+      "\u001b[31mValueError\u001b[39m: could not convert string to float: ''"
      ]
     }
    ],
@@ -263,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
