--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -66,25 +66,7 @@
    "execution_count": 1,
    "id": "fa9cb39f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bài thơ đã thay thế  \"...\n",
-      "Kiếp con người mỏng manh như là gió\n",
-      "Sống trên đời có được mấy lần vui\n",
-      "Sao phải đau mà không thể mỉm cười\n",
-      "Gắng buông nỗi ngậm ngùi nơi quá khứ\n",
-      "\n",
-      "Nếu có thể sao ta không làm thử\n",
-      "Để tâm hồn khắc hai chữ bình an\n",
-      "Cho đôi chân bước thanh thản nhẹ nhàng\n",
-      "Dù hướng đời có muôn ngàn đá sỏi\n",
-      "...\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Code lab 2  bài 2 ở đây\n",
     "\n",
@@ -122,15 +104,7 @@
    "execution_count": 2,
    "id": "7034990b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Phương trình có nghiệm:  -1.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Code lab 2  bài 3 ở đây\n",
     "a = float(input())\n",
@@ -204,7 +178,18 @@
    "execution_count": null,
    "id": "0e0172f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.14.0' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
+      "\u001b[1;31mOr install 'ipykernel' using the command: '\"c:/Program Files/Python314/python3.14t.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# code lab 2  bài làm thêm ở đây\n",
     "import math  \n",
@@ -247,16 +232,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
