--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -23,7 +23,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 5 bài 1 ở đây"
+    "# Code lab 5 bài 1 ở đây\n",
+    "from sanpham import SanPham\n",
+    "Sp1 = SanPham(\"Winner\", 3400000, 10)\n",
+    "Sp1 = XuatThongTinSanPham()\n"
    ]
   },
   {
@@ -41,7 +44,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 5  bài 2 ở đây"
+    "# Code lab 5  bài 2 ở đây\n",
+    "from sanpham import SanPham\n",
+    "sp1 = Sanpham(\"\",\"\",\"\")\n",
+    "sp2 = Sanpham(\"\",\"\",\"\")\n",
+    "Sp1 = NhapThongTinSanPham()\n",
+    "Sp2 = NhapThongTinSanPham()\n",
+    "Sp1 = XuatThongTinSanPham()\n",
+    "Sp2 = XuatThongTinSanPham()\n"
    ]
   },
   {
@@ -59,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code lab 5  bài 3 ở đây"
+    "# Code lab 5  bài 3 ở đây\n"
    ]
   },
   {
@@ -101,13 +111,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.13.2"
   }
  },
  "nbformat": 4,
